Added the option to leave and to forget previous tables
When you are the DM and open a game with a previous name, now you can
forget that table and create a new one. And you can also leave the
table.

--- a/player.html
+++ b/player.html
@@ -25,6 +25,7 @@
                     <span class="status-dot" id="status-dot"></span>
                     <span id="status-text">Connecting...</span>
                 </div>
+                <button class="btn-leave" id="leave-btn" title="Leave table">🚪 Leave</button>
                 <button class="sound-toggle" id="sound-toggle" title="Toggle sound">🔊</button>
             </div>
         </header>
@@ -388,6 +389,14 @@
         );
 
         UIHelpers.setupSoundToggle(soundToggle);
+
+        // Leave table button
+        document.getElementById('leave-btn').addEventListener('click', () => {
+            if (confirm('Leave the table?')) {
+                client.destroy();
+                window.location.href = 'index.html';
+            }
+        });
 
         // Initial render
         renderAll();
