--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Dice Online — A peer-to-peer dice roller for tabletop RPGs. No server required.">
     <title>Dice Online — Roll Together</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
