--- a/dm.html
+++ b/dm.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Dice Online — DM Screen">
     <title>Dice Online — DM</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
