--- a/player.html
+++ b/player.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Dice Online — Player Screen">
     <title>Dice Online — Player</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
