Added option to change nickname and profile picture

--- a/player.html
+++ b/player.html
@@ -26,8 +26,10 @@
                     <span class="status-dot" id="status-dot"></span>
                     <span id="status-text">Connecting...</span>
                 </div>
-                <button class="btn-leave" id="leave-btn" title="Leave table">🚪 Leave</button>
-                <button class="sound-toggle" id="sound-toggle" title="Toggle sound">🔊</button>
+                <button type="button" class="btn btn-icon" id="profile-settings-btn"
+                    title="Profile Settings">⚙️</button>
+                <button type="button" class="btn btn-icon" id="sound-toggle" title="Toggle Sound">🔊</button>
+                <button type="button" class="btn btn-danger" id="leave-btn" title="Leave Game">🚪 Leave</button>
             </div>
         </header>
 
@@ -58,6 +60,7 @@
     <script src="js/ui/diceRoller.js"></script>
     <script src="js/ui/playerPool.js"></script>
     <script src="js/ui/historyPanel.js"></script>
+    <script src="js/ui/profileModal.js"></script>
     <script src="js/ui/ui-helpers.js"></script>
 
     <script src="js/pages/player.js"></script>
