Second attemt at making the keep dice queue

--- a/player.html
+++ b/player.html
@@ -27,7 +27,7 @@
                     <span id="status-text">Connecting...</span>
                 </div>
                 <button type="button" class="btn btn-icon" id="profile-settings-btn"
-                    title="Profile Settings">⚙️</button>
+                    title="Settings">⚙️</button>
                 <button type="button" class="btn btn-icon" id="sound-toggle" title="Toggle Sound">🔊</button>
                 <button type="button" class="btn btn-danger" id="leave-btn" title="Leave Game">🚪 Leave</button>
             </div>
