--- a/dm.html
+++ b/dm.html
@@ -26,7 +26,7 @@
                     <span class="status-dot" id="status-dot"></span>
                     <span id="status-text">Connecting...</span>
                 </div>
-                <button type="button" class="btn btn-icon" id="profile-settings-btn" title="Profile Settings">⚙️</button>
+                <button type="button" class="btn btn-icon" id="profile-settings-btn" title="Settings">⚙️</button>
                 <button type="button" class="btn btn-icon" id="sound-toggle" title="Toggle Sound">🔊</button>
                 <button type="button" class="btn btn-danger" id="leave-btn" title="End Game">🚪 Leave</button>
             </div>
